<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90000000"
    android:gravity="center">
    <LinearLayout
        android:background="@drawable/roun"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">




    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ongoing Project"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="#49B3E2"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >

    </TextView>
    <TextView
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t1"
        android:textSize="13sp"
        android:textColor="@color/black"
        >

    </TextView>

    <TextView
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Repeat Project"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="#49B3E2"
        >
    </TextView>
    <TextView
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t2"
        android:textSize="13sp"
        android:textColor="@color/black"
        >

    </TextView>
    <TextView
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t3"
        android:textSize="13sp"
        android:textColor="@color/black"
        >

    </TextView>

        <Button
            android:id="@+id/serbtn"
            android:layout_width="110dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pop_btn"

            android:text="OK"
            android:textSize="20sp">

        </Button>

</LinearLayout>
</LinearLayout>