<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".AboutActivity">

    <fragment
        android:id="@+id/fragment"
        class="com.SampleApp.row.ActionbarFragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:background="@color/view_color"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="fill_parent"

            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"

                    android:orientation="horizontal">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="0.7"
                        android:layout_gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_gravity="center_horizontal"
                            android:scaleType="fitXY"
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:src="@drawable/app_icon_big"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/black"

                            android:text="@string/app_name"/>
                        <TextView
                            android:id="@+id/tvVersionNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textSize="10sp"
                            android:text="Version 2.4"/>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="0.3"
                        android:layout_gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                         <TextView
                            android:textSize="16sp"
                            android:id="@+id/tvKaizenAbout"
                            android:layout_marginRight="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kaizenAbout"/>
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/separator_height"
                    android:background="#b6b6b6" />
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Contact"
                        android:textColor="@color/label_color_gray" />

                    <TextView
                        style="@style/textClickable"
                        android:id="@+id/etKaizenContact"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:text="@string/kaizenContact"
                        android:tag="tel: +91 22 41516999"
                        android:textColorHint="@color/pale_gray"
                        android:singleLine="true"
                        android:padding="5dp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/separator_height"
                    android:background="#b6b6b6" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Email"
                        android:textColor="@color/label_color_gray" />

                    <TextView
                        style="@style/textClickable"
                        android:id="@+id/etKaizeEmail"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:text="@string/kaizenEmail"
                        android:textColorHint="@color/pale_gray"
                        android:tag="@string/kaizenEmail"
                        android:padding="5dp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/separator_height"
                    android:background="#b6b6b6" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Website"
                        android:textColor="@color/label_color_gray" />

                    <TextView
                        style="@style/textClickable"
                        android:id="@+id/etKaizenWebsite"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:text="@string/kaizenWebsite"
                        android:padding="5dp"
                        android:textColorHint="@color/pale_gray"
                        android:singleLine="true"
                        android:tag="http://www.rosteronwheels.com"
                        android:inputType="number"
                        />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/separator_height"
                    android:background="#b6b6b6" />


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        style="@style/textClickable"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:text="@string/kaizenRecommend"
                        android:padding="5dp"
                        android:textColorHint="@color/pale_gray"
                        android:singleLine="true"
                        android:inputType="number"
                        android:id="@+id/tvKaizenRecommend"
                        />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>





</LinearLayout>