<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <!-- Top Sliding Banners -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/terms_conditions"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:visibility="gone" />
            </LinearLayout>

            <View
                android:id="@+id/view_terms_and_condition"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/separator_height"
                android:background="@color/view_color"
                android:paddingTop="5dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_exit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/exit_btn"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:visibility="gone" />
                </LinearLayout>


                <View
                    android:id="@+id/margin"
                    android:layout_width="@dimen/separator_height"
                    android:layout_height="match_parent"
                    android:background="@color/view_color" />


                <!--<TextView-->
                <!--android:id="@+id/tv_margin"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="@dimen/activity_vertical_margin"-->
                <!--android:text="|"-->
                <!--android:textColor="@color/view_color"-->
                <!--android:visibility="gone"/>-->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_accept"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/accept_btn"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>


            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:gravity="bottom"
                android:padding="1dip"
                app:centered="true"
                app:fillColor="@color/white"
                app:snap="false" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
